[project]
name = "pushback-sensitivity-in-language-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets",
    "python-dotenv",
    "torch>=2.4.0",
    "transformers",
    "numpy<2.0.0",
    "accelerate>=1.14.0",
]
