[project]
name = "pushback-sensitivity-in-language-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.14.0",
    "bitsandbytes>=0.46.1",
    "datasets>=5.0.0",
    "python-dotenv>=1.2.2",
    "torch>=2.5.1",
    "transformers>=5.12.1",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [ { index = "pytorch-cu121" } ]
